index mi=odified

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Anim.js</title>
 </head>
 <body>
+
+    <!--My Amime.js App -->
     <div class="box red">C</div>
     <div class="box blue">O</div>
     <div class="box green ">M</div>
