--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="box black">I</div>
     <div class="box purple">L</div>
     <div class="box magenta">L</div>
+    <div class="box pink">L</div>
+    <div class="box rose">A</div>
     <script src="anime.min.js"></script>
     <script src="main.js" ></script>
 </body>
